# pokedata

./: .gitignore  README.md  config.yaml  pyproject.toml
.dvc/: config
data/: .gitignore  canonical.dvc
pokedata/: cli.py  config.py  cvat.py  dataset_build.py  dataset_cli.py  dataset_layout.py  dataset_splits.py  record.py
tests/: __init__.py  conftest.py  test_config.py  test_cvat.py  test_dataset_build.py  test_dataset_layout.py  test_dataset_splits.py
