[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pokedata"]

[project]
name = "pokedata"
version = "0.1.0"
description = "A Pokemon data management tool"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
]

[project.scripts]
pokedata = "pokedata.cli:app"
