[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pokedata"]

[project]
name = "pokedata"
version = "0.1.0"
description = "A Pokemon data management tool"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "cvat-sdk>=2.0.0",
    "polvo>=0.2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
pokedata = "pokedata.cli:app"
